import org.flywaydb.gradle.task.FlywayMigrateTask

//This is required as flyway now has a stand alone library for each database rather than being bundled together
buildscript {
  dependencies {
    classpath("org.flywaydb:flyway-database-postgresql:13.5.0")
  }
}

plugins {
  id 'application'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '4.1.1'
  id 'io.github.ben-manes.versions' version '0.61.0'
  id 'org.sonarqube' version '7.5.0.8588'
  id 'uk.gov.hmcts.java' version '0.12.70'
  id 'io.freefair.lombok' version '9.5.0'
  id 'org.flywaydb.flyway' version '13.5.0'
  id 'io.qameta.allure' version '4.2.0'
}

application {
  mainClass = 'uk.gov.hmcts.reform.fact.data.api.Application'
  group = 'uk.gov.hmcts.reform'
  version = '0.0.1'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

def configureSourceSet(String name) {
  sourceSets.create(name) { sourceSet ->
    sourceSet.java {
      compileClasspath += sourceSets.main.output + sourceSets.test.output
      runtimeClasspath += sourceSets.main.output + sourceSets.test.output
      srcDir "src/${name}/java"
    }
    sourceSet.resources.srcDir "src/${name}/resources"
  }
}

['smokeTest', 'integrationTest', 'functionalTest'].each { configureSourceSet(it) }

configurations {
  smokeTestImplementation.extendsFrom testImplementation
  smokeTestRuntimeOnly.extendsFrom runtimeOnly

  functionalTestImplementation.extendsFrom smokeTestImplementation
  functionalTestRuntimeOnly.extendsFrom runtimeOnly

  integrationTestImplementation.extendsFrom testImplementation
  integrationTestRuntimeOnly.extendsFrom runtimeOnly
}

flyway {
  url = System.getenv('FLYWAY_URL')
  user = System.getenv('FLYWAY_USER')
  password = System.getenv('FLYWAY_PASSWORD')
  baselineOnMigrate = true
  baselineVersion = '000'
}

tasks.register('migratePostgresDatabase', FlywayMigrateTask) {
  baselineOnMigrate = true
  if (project.hasProperty("dburl")) {
    url = "jdbc:postgresql://${dburl}"
  }
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

// https://github.com/gradle/gradle/issues/16791
tasks.withType(JavaExec).configureEach {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

tasks.withType(Test).configureEach {
  useJUnitPlatform()
  failFast = true

  testLogging {
    exceptionFormat = 'full'
  }
}

tasks.register('functional', Test) {
  description = "Runs functional tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
}

tasks.register('integration', Test) {
  description = "Runs integration tests"
  group = "Verification"
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  failFast = true
}

tasks.register('smoke', Test) {
  description = "Runs Smoke Tests"
  group = "Verification"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

jacoco {
  toolVersion = '0.8.15'
}

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.required.set(true)
    csv.required.set(false)
    xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
  }
}

project.tasks['sonarqube'].dependsOn jacocoTestReport

sonarqube {
  properties {
    property "sonar.projectName", "fact-data-api"
    property "sonar.projectKey", "uk.gov.hmcts.reform:fact-data-api"
    // entities are atomic in the repo and necessarily have some duplication that
    // we need to ignore.
    property "sonar.cpd.exclusions", "**/entities/*.java"
    // java:S4684 is intentionally ignored at repository scope.
    property "sonar.issue.ignore.multicriteria", "e1"
    property "sonar.issue.ignore.multicriteria.e1.ruleKey", "java:S4684"
    property "sonar.issue.ignore.multicriteria.e1.resourceKey", "**/*.java"
  }
}

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
}

checkstyle {
  toolVersion = '14.1.0'
}

allure {
  version = '2.46.1'
  adapter {
    aspectjWeaver.set(false)
  }
}

lombok {
  version = '1.18.48'
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url = uri('https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1')
  }
}

ext['snakeyaml.version'] = '2.0'
ext['log4j2.version'] = '2.25.5' // CVE-2025-68161, CVE-2026-49844
ext['tomcat.version'] = '11.0.25' // CVE-2026-65182, CVE-2026-65905, CVE-2026-68525

dependencies {
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webmvc'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aspectj'
  // Required for Azure AAD autoconfigure classpath expectations on Boot 4.x.
  implementation group: 'org.springframework.boot', name: 'spring-boot-restclient'
  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '5.0.3'
  // auth
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security-oauth2-resource-server'
  // cache
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine'

  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '3.1.1'

  implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.13'
  implementation group:'org.springframework.boot', name:'spring-boot-flyway'

  implementation group: 'org.flywaydb', name: 'flyway-core', version: '13.5.0'
  implementation group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '13.5.0'

  implementation group: 'com.azure.spring', name: 'spring-cloud-azure-starter-storage-blob', version: '7.4.0'

  implementation group: 'tools.jackson.dataformat', name: 'jackson-dataformat-csv', version: '3.2.2'

  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '8.0.0'

  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'

  implementation group: 'com.slack.api', name: 'slack-api-client', version: '1.51.0'


  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-webmvc-test'
  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator-test'
  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa-test'
  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-aspectj-test'

  integrationTestImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.21.4'

  smokeTestImplementation group: 'io.rest-assured', name: 'rest-assured', version: '6.0.1'
  functionalTestImplementation group: 'io.qameta.allure', name: 'allure-junit5', version: '2.35.5'
  functionalTestImplementation group: 'io.qameta.allure', name: 'allure-rest-assured', version: '2.35.5'
}

tasks.named('test') {
  systemProperty 'allure.label.parentSuite', 'Unit tests'
}
tasks.named('integration') {
  systemProperty 'allure.label.parentSuite', 'Integration tests'
}
tasks.named('smoke') {
  systemProperty 'allure.label.parentSuite', 'Smoke tests'
}
tasks.named('functional') {
  systemProperty 'allure.label.parentSuite', 'Functional tests'
}

bootJar {
  archiveFileName = "fact-data-api.jar"

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
rootProject.tasks.named("processSmokeTestResources") {
  duplicatesStrategy = 'include'
}

// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
rootProject.tasks.named("processIntegrationTestResources") {
  duplicatesStrategy = 'include'
}

// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
rootProject.tasks.named("processFunctionalTestResources") {
  duplicatesStrategy = 'include'
}

wrapper {
  distributionType = Wrapper.DistributionType.ALL
}

dependencyManagement {
  dependencies {
    // CVE-2026-33117
    dependency group: 'com.azure', name: 'azure-core', version: '1.59.1'
    dependency group: 'com.azure', name: 'azure-core-amqp', version: '2.12.1'
    dependency group: 'com.azure', name: 'azure-core-http-netty', version: '1.16.7'
    dependency group: 'com.azure', name: 'azure-core-management', version: '1.19.7'
    dependency group: 'com.azure', name: 'azure-identity', version: '1.18.6'
    dependency group: 'com.microsoft.azure', name: 'msal4j', version: '1.26.0'

    // CVE-2026-66257 and related proton-j advisories
    dependency group: 'org.apache.qpid', name: 'proton-j', version: '0.35.0'

    // CVE-2026-53914
    dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '2.4.20'
    dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: '2.4.20'
    dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk7', version: '2.4.20'
    dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: '2.4.20'

    // CVE-2025-48976
    dependency group: 'commons-fileupload', name: 'commons-fileupload', version: '1.6.0'
  }
}
